# math

./: README.md
docs/: README.md  _config.yml  index.html
docs/ellipse/: index.html
ellipse/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
ellipse/docs/: ellipse_web_demo.py  export_static_demo.py  index.html
ellipse/lean/: AnalysisBridges.lean  EllipseProofs.lean  EllipseProofs_gen1_backup.lean  README.md  lake-manifest.json  lakefile.toml
ellipse/lean/AnalysisBridges/: TaylorBounds.lean
ellipse/lean/EllipseProofs/: Basic.lean  CFArithmetic.lean  CFCompositor.lean  CFIdentities.lean  CFInstances.lean  CFMatrixChain.lean  CFQPairs.lean  CFReduction.lean  CFSpectral.lean  CFWorpitzky.lean  CubicCuff.lean  DenjoyKoksma.lean  FocalGeometry.lean  FourierDenjoyKoksma.lean  FranelConnection.lean  GammaConnection.lean  GaussCFMinimal.lean  KinematicChain.lean  LittlewoodCoupling.lean  LittlewoodObstruction.lean  MEPBDuality.lean  MatlibCFBridge.lean  Monodromy.lean  Monotonicity.lean  NonAnalyticBound.lean  Optimality.lean  PiBounds.lean  ToricLittlewood.lean
ellipse/paper/: two_foci_one_cup_ellipse_perimeter_mamoun_rev4.tex  two_foci_one_cup_ellipse_perimeter_mamoun_v17.tex  underwood_one_page_summary_v3.tex  underwood_press_handout_v2.tex
ellipse/scripts/: cf_integer_verify.py  chord_sweep_verify.py  ec_lmfdb_verify.py  fptt_exact_arithmetic.py  mercury_precession_check.py  precession_braiding_map_check.py  verify_all_claims_v2.py
ellipse/src/: __init__.py  formulas.py  server.py  verify.py
snowcrystal/: README.md
(+48 files in other folders)
