[project]
name = "ellipse-perimeter-world-record"
version = "1.0.0"
description = "World's most accurate closed-form ellipse perimeter release: 0.018 ppb champion and 0.083 ppm practical formula"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Monir Mamoun"}]
dependencies = [
    "mpmath>=1.3.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
ellipse-verify = "src.verify:main"

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"
